# sp-pipeline

./: .gitignore  README.md  pyproject.toml  run_viral_queries.sh  update_human_queries.sh  verify_pipeline.py
config/: default_config.yaml
output/: alphavirus_E3.csv  bunyavirus.csv  flavivirus.csv  influenza.csv  influenza_HA.csv  influenza_NA.csv  viral_all.csv
scripts/: test_viral_queries.py
sps_pipeline_santi/: .gitignore  README.md  requirements.txt
sps_pipeline_santi/config/: presets.yaml
sps_pipeline_santi/src/: main.py
sps_pipeline_santi/src/api/: uniprot_client.py
sps_pipeline_santi/src/parsers/: __init__.py  bunyavirus_signals.py  signal_anchor.py  signal_peptide.py  viral_signals.py
sps_pipeline_santi/src/processing/: deduplication.py  evidence.py  features.py
src/sp_pipeline/: __init__.py  cli.py  config.py  dedup.py  exporters.py  models.py  pipeline.py  utils.py
src/sp_pipeline/predictors/: __init__.py  signalp.py
src/sp_pipeline/sources/: __init__.py  ncbi.py  uniprot.py
tests/: test_basic.py  test_queries.py
